# JdeRobot2015

./: README.md
catkin_ws/src/ARDroneInterface/: CMakeLists.txt  package.xml
catkin_ws/src/ARDroneInterface/include/ARDroneInterface/: CMDVelData.h
catkin_ws/src/ARDroneInterface/src/: ArDroneExtraClient.cpp  ArDroneExtraClient.h  CMDVelClient.cpp  CMDVelClient.h  Ros_Ice.h  main.cpp
catkin_ws/src/ARDrone_GUI/: CMakeLists.txt  package.xml
catkin_ws/src/ARDrone_GUI/include/ARDrone_GUI/: ARDrone_Plugin.h  TeleopWidget.h
catkin_ws/src/ARDrone_GUI/src/: ARDrone_Plugin.cpp  TeleopWidget.cpp  main.cpp
catkin_ws/src/IceRosGazebo/: CMakeLists.txt  README.txt  package.xml
catkin_ws/src/IceRosGazebo/launch/: main.launch
catkin_ws/src/IceRosGazebo/models/pioneer2dxRos/: model.sdf
catkin_ws/src/IceRosGazebo/msg/: EncodersData.msg  MotorData.msg  Pose3DMotorsData.msg
catkin_ws/src/IceRosGazebo/src/: CameraInterface.cpp  CameraInterface.h  EncodersInterface.cpp  EncodersInterface.h  IceGazeboInterface_main.cpp  LaserInterface.cpp  LaserInterface.h  MotorsInterface.cpp  MotorsInterface.h  Pose3DEncodersInterface.cpp  Pose3DEncodersInterface.h  Pose3DInterface.cpp  Pose3DInterface.h  Pose3DMotorsInterface.cpp  Pose3DMotorsInterface.h  RosCameraPlugin.cpp  RosEncodersPlugin.cpp  RosEncodersPlugin.h  RosLaserPlugin.cpp  RosLaserPlugin.h  RosMotorsPlugin.cpp  RosMotorsPlugin.h  RosPose3DEncodersPlugin.cpp  RosPose3DEncodersPlugin.h  RosPose3DPlugin.cpp  RosPose3DPlugin.h  Ros_Ice.h  main.cpp
catkin_ws/src/IceRosGazebo/srv/: MotorsSrv.srv
catkin_ws/src/IceRosGazebo/worlds/: pioneer2dxRos.world
catkin_ws/src/RosBagParser/: CMakeLists.txt  README.txt  package.xml  pioneer2dx.cfg
catkin_ws/src/RosBagParser/src/: CameraInterface.cpp  CameraInterface.h  EncodersInterface.cpp  EncodersInterface.h  LaserInterface.cpp  LaserInterface.h  MotorsInterface.cpp  MotorsInterface.h  Pose3DEncodersInterface.cpp  Pose3DEncodersInterface.h  Pose3DInterface.cpp  Pose3DInterface.h  Pose3DMotorsInterface.cpp  Pose3DMotorsInterface.h  RosBagParser.cpp  RosBagParser.h  RosBagParser_main.cpp
catkin_ws/src/RosIceBridge/: CMakeLists.txt  manifest.json  package.xml
catkin_ws/src/RosIceBridge/interfaces/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/src/RosIceBridge/interfaces/cpp/jderobot/: CTestTestfile.cmake  Makefile  Num.cpp  Num.h  cmake_install.cmake
catkin_ws/src/RosIceBridge/interfaces/slice/: Num.ice
catkin_ws/src/RosIceBridge/src/: Bridge.cpp  Bridge.h  IceRosBridge.cpp  IceRosBridge.h  IceRosClient_main.cpp  IceRosServer_main.cpp  ROSIceServer_main.cpp  ROSPublisher_main.cpp  RosIceBridge.cpp  RosIceBridge.h  Ros_Ice.cpp  Ros_Ice.h  publisher_main.cpp  subscriber_main.cpp
catkin_ws/src/RosIceCamera/: CMakeLists.txt  package.xml
catkin_ws/src/RosIceCamera/interfaces/slice/: CMakeLists.txt  Image.ice
catkin_ws/src/RosIceCamera/src/: CameraClient.cpp  CameraClient.h  CameraClient_main.cpp  IceImageViewer_main.cpp  ImageContainerI.cpp  ImageContainerI.h  RosImageServer.cpp  RosImageServer.h  RosImageServer_main.cpp  Ros_Ice.h
catkin_ws/src/RosIceGazebo/: CMakeLists.txt  introrob.cfg  package.xml
catkin_ws/src/RosIceGazebo/msg/: Laser.msg
catkin_ws/src/RosIceGazebo/src/: CameraClient.cpp  CameraClient.h  EncodersClient.cpp  EncodersClient.h  LaserClient.cpp  LaserClient.h  MotorClient.cpp  MotorClient.h  Pose3DClient.cpp  Pose3DClient.h  Pose3DEncodersClient.cpp  Pose3DEncodersClient.h  Pose3DMotorsClient.cpp  Pose3DMotorsClient.h  RosGazeboInterface_main.cpp  Ros_Ice.h  TeleOperator.cpp  TeleOperator.h
catkin_ws/src/RosIceMessage/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_ws/src/RosIceMessage/msg/: CMDVelData.msg  Laser.msg  Pose3DEncodersData.msg  Pose3DMotorsData.msg
catkin_ws/src/RosIceMessage/srv/: MotorsSrv.srv
catkin_ws/src/RosLib/: CMakeLists.txt  package.xml
catkin_ws/src/RosLib/include/RosLib/: EncodersClient.h  EncodersData.h  EncodersInterface.h  Laser.h  LaserInterface.h  MotorClient.h  MotorData.h  MotorsInterface.h  MotorsSrv.h  Pose3DInterface.h  RosEncodersPlugin.h  RosMotorsPlugin.h  TeleOperator.h
catkin_ws/src/RosLib/src/: CameraClient.h  CameraInterface.cpp  EncodersClient.cpp  EncodersClient.h  EncodersInterface.h  KinectClient.cpp  KinectInterface.h  LaserClient.h  LaserInterface.cpp  MotorsInterface.cpp  MotorsSrvRequest.h  MotorsSrvResponse.h  Pose3D.h  Pose3DClient.h  Pose3DEncodersClient.h  Pose3DEncodersData.h  Pose3DEncodersInterface.cpp  Pose3DEncodersInterface.h  Pose3DInterface.h  Pose3DMotorsClient.h  Pose3DMotorsData.h  Pose3DMotorsInterface.cpp  Pose3DMotorsInterface.h  RosCameraPlugin.h  RosEncodersPlugin.cpp  RosLaserPlugin.cpp  RosLaserPlugin.h  RosPose3DPlugin.cpp  TeleOperator.cpp
catkin_ws/src/RosPCL/: CMakeLists.txt  kinect-ros.cfg  kinect.cfg  package.xml
catkin_ws/src/RosPCL/msg/: RGB_Depth_Image.msg
catkin_ws/src/RosPCL/src/: KinectClient.h  KinectInterface.cpp  KinectInterface.h  RosKinectGrabber.cpp  RosKinectGrabber.h  RosOpenNIViewer.cpp  RosOpenNIViewer.h  main_grabber.cpp  main_ice_grabber.cpp  main_ice_interface.cpp  main_ros_grabber.cpp  main_ros_viewer.cpp  main_viewer.cpp
